# fastapi-rabbitmq

./: LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
infra/: Dockerfile
src/app/: logger.py  main.py
src/app/consumers/: __init__.py  base_consumer.py  main.py  rabbit_mq.py
src/app/dependencies/: __init__.py  main.py
src/app/providers/: __init__.py  base_provider.py  main.py  rabbit_mq.py
src/app/settings/: __init__.py  main.py  project.py  rabbit_mq.py
src/consumers/: base_consumer.py  rabbit_mq_consumer.py
src/handlers/: base_handler.py  test_handler.py
