[tool.poetry]
name = "fastapi-rabbitmq"
version = "0.1.0"
description = "Learning RabbitMQ"
authors = ["Mikhail Spiridonov <mspiridonov2706@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.105.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
uvicorn = "^0.24.0.post1"
rodi = "^2.0.6"
aio-pika = "^9.3.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
mypy = "^1.7.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle error
    "W", # pycodestyle warning
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
] # all rules here https://docs.astral.sh/ruff/rules/#pep8-naming-n
fixable = ["F401", "E501"]


[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.mypy]
explicit_package_bases = true
